Fix new version check